@@ -1,24 +1,23 @@
 #!/bin/bash
 
-# Check if Java is installed
-if type -p java; then
-    echo "Java found in PATH."
-elif [[ -x "$JAVA_HOME/bin/java" ]]; then
-    echo "Java found in JAVA_HOME."
+DEPLOY_DIR="/home/pi/deploy/Trick17App/"
+
+JAR_NAME="Trick17App"
+SERVICE_NAME="trick17app"
+
+SERVICE_FILE="/etc/systemd/system/${SERVICE_NAME}.service"
+TEMPLATE_FILE="${DEPLOY_DIR}/autostart.service"
+
+if [ -f "$TEMPLATE_FILE" ]; then
+    sudo cp "$TEMPLATE_FILE" "$SERVICE_FILE"
+    sudo systemctl daemon-reload
+    sudo systemctl stop "$SERVICE_NAME"
+    sudo systemctl enable "$SERVICE_NAME"
+    sudo systemctl start "$SERVICE_NAME"
+    echo "Service installed and enabled to start on boot."
 else
-    echo "Java not found. Installing JDK 21..."
-
-    # For Debian/Ubuntu systems (requires sudo privileges)
-    sudo apt update
-    sudo apt install -y openjdk-21-jdk
-
-    if [ $? -ne 0 ]; then
-        echo "Failed to install JDK 21. Exiting."
-        exit 1
-    fi
+    echo "ERROR: Service template not found at $TEMPLATE_FILE"
+    exit 1
 fi
 
-cd "$1"
-pkill java
-DISPLAY=:0 XAUTHORITY=/home/pi/.Xauthority java -Dsun.java2d.opengl=True -XX:+UseZGC -Xmx1G -jar "$2".jar
 exit 0
